# prediction-swarm

./: .envrc  .gitignore  README.md  docker-compose.yml  flake.nix  justfile  pyproject.toml
.github/workflows/: deploy.yml
db/: alembic.ini  db_service.py  models.py
db/alembic/: env.py
docs/: evalution-process.md
docs/streams/: pred-finding.md
evaluator/: AGENTS.md  CLAUDE.md  Dockerfile  docker-compose.yml  helmfile.yaml  justfile  pyproject.toml  values.yaml
evaluator/.direnv/: flake-profile-1-link
evaluator/prompts/: chat_prompt.json  scoring.toml  validity_gate.toml
evaluator/scripts/: fetch_predictions_csv.py  llm_validation.py
evaluator/src/: __init__.py  config.py  evaluator.py  openrouter_client.py  prediction_extract.py  schemas.py  stream_weights.py
evaluator/src/db/: database.py  db_service.py  models.py
evaluator/src/db/alembic/: env.py
evaluator/src/db/alembic/versions/: 2025_09_01_0242-eed632915958_initial_migration_add_program_.py  2025_09_02_1301-181655b5f68d_finder_key.py  2025_09_04_1309-58b6db11c76d_reason.py
evaluator/tests/: test_compose_call.py  test_stream_weights.py
evaluator/tests/promptfoo/: promptfooconfig.yaml  validators.js
evaluator/tests/promptfoo/assertions/: exactScore.js  invalid.js  jsonShape.js  onlyJsonOutput.js  scoreType.js
evaluator/tests/promptfoo/evals/: eval-n5U-2025-09-15T17_58_25-table.csv  validated_predictions.curated.json
helm/: values-utils.yaml  values.yaml
scripts/: manual_review.py
src/: __init__.py  api_client.py  config.py  evaluator.py  openrouter_client.py  prediction_extract.py
src/db/: alembic.ini  database.py  db_service.py  models.py
src/db/alembic/: env.py
src/db/alembic/versions/: 2025_09_01_0546-a268ec9ca372_evaluation.py
tests/promptfoo/: promptfooconfig.yaml  validators.js
